--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,6 +45,7 @@ subjects:
 - !lcsh 'Philippines -- History -- Sources'
 - !lcc 'DS'
 - !lcsh 'Demarcation line of Alexander VI'
+- GITenberg
 title: "The Philippine Islands, 1493-1898: Volume 32, 1640\r\nExplorations by early\
   \ navigators, descriptions of the islands and their peoples, their history and records\
   \ of the Catholic missions, as related in contemporaneous books and manuscripts,\
